--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,5 @@
-<section style="padding: 24px;">
-    <h1>Home</h1>
-    <p>Hero / About / Skills / Projects / Contact</p>
-</section>
+<app-hero></app-hero>
+<app-about></app-about>
+<app-skills></app-skills>
+<app-projects></app-projects>
+<app-contact></app-contact>
