--- a/src/app/pages/home/sections/contact/contact.component.html
+++ b/src/app/pages/home/sections/contact/contact.component.html
@@ -1,7 +1,5 @@
-<section class="section">
+<section id="contact" class="section">
   <div class="container">
     <h2>Contact</h2>
-    <p>Platzhalter…</p>
   </div>
 </section>
-
