--- a/src/app/pages/home/sections/projects/projects.component.html
+++ b/src/app/pages/home/sections/projects/projects.component.html
@@ -1,7 +1,5 @@
-<section class="section">
+<section id="projects" class="section">
   <div class="container">
     <h2>Projects</h2>
-    <p>Platzhalter…</p>
   </div>
 </section>
-
