icons header, hero update

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,12 +1,12 @@
 <header class="header">
   <div class="container header__inner">
     <div class="header__left">
-      <!-- Language Toggle -->
-      <div class="lang">
+      <!-- Language Switch -->
+      <div class="lang lang--slider" role="group" aria-label="Language switch">
+        <span class="lang__thumb isLeft" aria-hidden="true"></span>
         <button class="lang__btn isActive" type="button">EN</button>
         <button class="lang__btn" type="button">DE</button>
       </div>
-
       <!-- Nav -->
       <nav class="nav">
         <a class="nav__link" href="#about">About me</a>
@@ -17,7 +17,7 @@
 
     <!-- Logo -->
     <a class="logo" routerLink="/" aria-label="Home">
-      <img src="assets/logo/dimitlogo_transparent_gold.png" alt="DIMIT Logo">
+      <img src="assets/logo/logo_grau.png" alt="DIMIT Logo">
     </a>
   </div>
 </header>
