--- a/src/app/pages/home/sections/hero/hero.component.html
+++ b/src/app/pages/home/sections/hero/hero.component.html
@@ -3,9 +3,21 @@
         <p class="hero__kicker neon-kicker">Frontend Developer</p>
         <h1 class="hero__title neon-title">Milos Dimitrijevic</h1>
         <div class="hero__actions">
-            <a class="btn" href="#projects">Check my work</a>
-            <a class="btn" href="#contact">Contact me</a>
+            <a class="btn btn--marquee" href="#projects">
+                <span class="btn__text">
+                    <span class="btn__text-inner">Check my work</span>
+                    <span class="btn__text-duplicate">Check my work</span>
+                </span>
+            </a>
+
+            <a class="btn btn--marquee" href="#contact">
+                <span class="btn__text">
+                    <span class="btn__text-inner">Contact me</span>
+                    <span class="btn__text-duplicate">Contact me</span>
+                </span>
+            </a>
         </div>
+
     </div>
 
     <!-- left scroll hint -->
