social media links edit,

--- a/src/app/pages/home/sections/hero/hero.component.html
+++ b/src/app/pages/home/sections/hero/hero.component.html
@@ -24,9 +24,11 @@
 
   <!-- Left: Scroll hint -->
   <div class="hero__left" aria-hidden="true">
-    <div class="scrollHint">
+    <div class="scrollHint" aria-hidden="true">
       <img src="assets/icons/pfeil.svg" alt="" />
+      <img src="assets/icons/pfeil_down.svg" alt="" />
     </div>
+
     <div class="line"></div>
   </div>
 
@@ -35,12 +37,14 @@
     <a href="mailto:dm@dimit.cc" class="email">dm&#64;dimit.cc</a>
 
     <div class="icons">
-      <a class="social" href="https://github.com/milosdimi" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+      <a class="social" href="https://github.com/milosdimi" target="_blank" rel="noopener noreferrer"
+        aria-label="GitHub">
         <img class="social__icon social__icon--base" src="assets/icons/Github.svg" alt="" />
         <img class="social__icon social__icon--hover" src="assets/icons/Github-1.svg" alt="" />
       </a>
 
-      <a class="social" href="https://www.linkedin.com/in/milos-dimitrijevic-35a552195/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+      <a class="social" href="https://www.linkedin.com/in/milos-dimitrijevic-35a552195/" target="_blank"
+        rel="noopener noreferrer" aria-label="LinkedIn">
         <img class="social__icon social__icon--base" src="assets/icons/linkedin.svg" alt="" />
         <img class="social__icon social__icon--hover" src="assets/icons/linkedin_white.svg" alt="" />
       </a>
