--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 code,
 .mono {
   font-family: "Fira Code", ui-monospace, monospace;
@@ -11,7 +10,7 @@ code,
   --text: rgba(255, 255, 255, 0.9);
   --muted: rgba(255, 255, 255, 0.7);
 
-  --accent: #78d7c3; 
+  --accent: #78d7c3;
   --border: rgba(255, 255, 255, 0.22);
 
   --t-fast: 120ms;
@@ -23,7 +22,7 @@ code,
 body {
   margin: 0;
   color: var(--text);
-  background: linear-gradient(135deg, var(--bg-0) 23%, var(--bg-1) 100%);
+  background: var(--bg-0);
   font-family: "Karla", system-ui, sans-serif;
 }
 
