--- a/src/app/pages/home/sections/hero/hero.component.html
+++ b/src/app/pages/home/sections/hero/hero.component.html
@@ -3,6 +3,7 @@
     <p class="hero__kicker">Frontend Developer</p>
     <h1 class="hero__title">Milos Dimitrijevic</h1>
 
+    <!-- Center: CTA Buttons -->
     <div class="hero__actions">
       <a class="btn btn--marquee" href="#projects">
         <span class="btn__text" aria-hidden="true">
@@ -53,32 +54,44 @@
     <div class="line"></div>
   </div>
 
-  <!-- Bottom ribbon marquee -->
+  <!-- Marquee -->
   <div class="marquee" aria-hidden="true">
     <div class="marquee__track">
-      <div class="marquee__row">
-        <span>Available for remote work</span><span class="dot">•</span>
-        <span>Frontend Developer</span><span class="dot">•</span>
-        <span>Based in Kufstein</span><span class="dot">•</span>
-        <span>Open to work</span><span class="dot">•</span>
 
-        <span>Available for remote work</span><span class="dot">•</span>
-        <span>Frontend Developer</span><span class="dot">•</span>
-        <span>Based in Kufstein</span><span class="dot">•</span>
-        <span>Open to work</span><span class="dot">•</span>
+      <div class="marquee__row">
+        <div class="marquee__run">
+          <span>Available for remote work</span><span class="dot">•</span>
+          <span>Frontend Developer</span><span class="dot">•</span>
+          <span>Based in Kufstein</span><span class="dot">•</span>
+          <span>Open to work</span><span class="dot">•</span>
+        </div>
+
+        <div class="marquee__run" aria-hidden="true">
+          <span>Available for remote work</span><span class="dot">•</span>
+          <span>Frontend Developer</span><span class="dot">•</span>
+          <span>Based in Kufstein</span><span class="dot">•</span>
+          <span>Open to work</span><span class="dot">•</span>
+        </div>
       </div>
 
       <div class="marquee__row marquee__row--reverse">
-        <span>Available for remote work</span><span class="dot">•</span>
-        <span>Frontend Developer</span><span class="dot">•</span>
-        <span>Based in Kufstein</span><span class="dot">•</span>
-        <span>Open to work</span><span class="dot">•</span>
+        <div class="marquee__run">
+          <span>Available for remote work</span><span class="dot">•</span>
+          <span>Frontend Developer</span><span class="dot">•</span>
+          <span>Based in Kufstein</span><span class="dot">•</span>
+          <span>Open to work</span><span class="dot">•</span>
+        </div>
 
-        <span>Available for remote work</span><span class="dot">•</span>
-        <span>Frontend Developer</span><span class="dot">•</span>
-        <span>Based in Kufstein</span><span class="dot">•</span>
-        <span>Open to work</span><span class="dot">•</span>
+        <div class="marquee__run" aria-hidden="true">
+          <span>Available for remote work</span><span class="dot">•</span>
+          <span>Frontend Developer</span><span class="dot">•</span>
+          <span>Based in Kufstein</span><span class="dot">•</span>
+          <span>Open to work</span><span class="dot">•</span>
+        </div>
       </div>
+
     </div>
   </div>
+
+
 </section>
