--- a/src/app/pages/home/sections/about/about.component.html
+++ b/src/app/pages/home/sections/about/about.component.html
@@ -1,25 +1,23 @@
-<section class="about" id="about">
+<section class="about" id="about" #aboutSection>
   <div class="container about__inner">
 
-    <!-- Left: Image -->
-    <div class="about__image">
-      <img src="assets/img/profilbildschaten.png" alt="Profilbild Milos Dimitrijevic" />
+    <div class="about__image"
+         [@revealLeft]="inView ? 'visible' : 'hidden'">
+      <div class="about__image-wrap">
+        <img src="assets/img/profil1.png"
+             alt="Profilbild Milos Dimitrijevic" />
+      </div>
     </div>
 
-    <!-- Right: Content -->
-    <div class="about__content">
+    <div class="about__content"
+         [@revealRight]="inView ? 'visible' : 'hidden'">
       <div class="about__card">
         <span class="about__kicker">Who I Am</span>
-        <h2 class="about__title">Über mich</h2>
+        <h2 class="about__title">{{ about.title }}</h2>
 
         <p class="about__text">
-          Ich bin ein leidenschaftlicher Frontend- und Webentwickler mit Fokus auf
-          moderne, performante und nutzerfreundliche Webanwendungen.
-        </p>
-
-        <p class="about__text">
-          Neben HTML, CSS und JavaScript arbeite ich intensiv mit Angular,
-          um skalierbare Web-Apps umzusetzen – von der Idee bis zum Deployment.
+          Ich bin ein leidenschaftlicher Frontend- und Webentwickler mit Fokus auf moderne,
+          performante und nutzerfreundliche Webanwendungen.
         </p>
 
         <ul class="about__facts">
@@ -38,7 +36,6 @@
         </ul>
       </div>
     </div>
-
 
   </div>
 </section>
