--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,7 @@ body {
   color: var(--text);
   background: var(--bg-0);
   font-family: "Karla", system-ui, sans-serif;
+  overflow-x: hidden;
 }
 
 .container {
